fix for crasher bug #197203 if your "From" address doesn't have an @ symbol, we crash on send. thanks to parish@ntlworld.com for the bug report, and the initial patch. r/sr=sspitzer